<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/deep_green">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp">

            <ImageView
                android:id="@+id/locationIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/baseline_location_pin_24"
                app:tint="@color/white"/>

            <TextView
                android:id="@+id/textViewGreenhouseLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/soft_blue_green"
                android:layout_marginStart="8dp"
                android:text="The Pandaaan, Pasuruan" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewGreenhouseTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="The Greenhouse Aarhus"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Measurements"
                android:textSize="16sp"
                android:textColor="@color/soft_blue_green"
                android:textStyle="bold"/>

            <View
                android:layout_width="160dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/historicalData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Historical Data"
                android:textSize="16sp"
                android:textColor="@color/soft_blue_green"
                android:textStyle="bold"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="The last recorded measurements"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:layout_marginBottom="8dp" />

        <!-- Measurement details (CO2, Humidity, Temperature, Light) -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp"
                android:layout_margin="4dp"
                android:background="@drawable/stroke">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/baseline_cloud_24"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/co2"
                    android:textColor="@color/soft_blue_green"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/co2Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="414ppm"
                    android:textSize="16sp"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp"
                android:layout_margin="4dp"
                android:background="@drawable/stroke">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/water_drop"
                    app:tint="@color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:textSize="18sp"
                    android:textColor="@color/soft_blue_green"
                    android:layout_marginBottom="4dp" />
                <TextView
                    android:id="@+id/humidityValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20%"
                    android:textSize="16sp"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp"
                android:layout_margin="4dp"
                android:background="@drawable/stroke">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/temperature_low"
                    app:tint="@color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature"
                    android:textSize="18sp"
                    android:textColor="@color/soft_blue_green"
                    android:layout_marginBottom="4dp" />
                <TextView
                    android:id="@+id/tempValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="24.5C"
                    android:textSize="16sp"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp"
                android:layout_margin="4dp"
                android:background="@drawable/stroke">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/lightbulb"
                    app:tint="@color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lighting"
                    android:textSize="18sp"
                    android:textColor="@color/soft_blue_green"
                    android:layout_marginBottom="4dp" />
                <TextView
                    android:id="@+id/lightValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="80%"
                    android:textSize="16sp"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Threshold"
            android:textSize="18sp"
            android:textColor="@color/soft_blue_green"
            android:layout_marginTop="16dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp"
                android:layout_margin="4dp"
                android:background="@drawable/stroke">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/baseline_cloud_24"
                    app:tint="@color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/co2"
                    android:textSize="18sp"
                    android:textColor="@color/soft_blue_green"
                    android:layout_marginBottom="4dp" />
                <TextView
                    android:id="@+id/co2MinValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Min 20%"
                    android:textSize="16sp"
                    android:textColor="@color/white" />
                <TextView
                    android:id="@+id/co2MaxValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Max 55%"
                    android:textSize="16sp"
                    android:textColor="@color/white" />
                <Button
                    android:id="@+id/co2AddButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_threshold"
                    android:visibility="gone"
                    android:backgroundTint="@color/jungle_green"
                    android:textColor="@color/white" />
                <Button
                    android:id="@+id/co2EditButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    android:visibility="gone"
                    android:backgroundTint="@color/jungle_green"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp"
                android:layout_margin="4dp"
                android:background="@drawable/stroke">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/water_drop"
                    app:tint="@color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:textSize="18sp"
                    android:textColor="@color/soft_blue_green"
                    android:layout_marginBottom="4dp" />
                <TextView
                    android:id="@+id/humidityMinValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Min 20%"
                    android:textSize="16sp"
                    android:textColor="@color/white" />
                <TextView
                    android:id="@+id/humidityMaxValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Max 55%"
                    android:textSize="16sp"
                    android:textColor="@color/white" />
                <Button
                    android:id="@+id/humidityAddButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_threshold"
                    android:visibility="gone"
                    android:backgroundTint="@color/jungle_green"
                    android:textColor="@color/white" />
                <Button
                    android:id="@+id/humidityEditButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    android:visibility="gone"
                    android:backgroundTint="@color/jungle_green"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp"
                android:layout_margin="4dp"
                android:background="@drawable/stroke">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/temperature_low"
                    app:tint="@color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature"
                    android:textSize="18sp"
                    android:textColor="@color/soft_blue_green"
                    android:layout_marginBottom="4dp" />
                <TextView
                    android:id="@+id/tempMinValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Min 20%"
                    android:textSize="16sp"
                    android:textColor="@color/white" />
                <TextView
                    android:id="@+id/tempMaxValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Max 55%"
                    android:textSize="16sp"
                    android:textColor="@color/white" />
                <Button
                    android:id="@+id/tempAddButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_threshold"
                    android:visibility="gone"
                    android:backgroundTint="@color/jungle_green"
                    android:textColor="@color/white" />
                <Button
                    android:id="@+id/tempEditButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    android:visibility="gone"
                    android:backgroundTint="@color/jungle_green"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp"
                android:layout_margin="4dp"
                android:background="@drawable/stroke">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/lightbulb"
                    app:tint="@color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lighting"
                    android:textSize="18sp"
                    android:textColor="@color/soft_blue_green"
                    android:layout_marginBottom="4dp" />
                <TextView
                    android:id="@+id/lightMinValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Min 20%"
                    android:textSize="16sp"
                    android:textColor="@color/white" />
                <TextView
                    android:id="@+id/lightMaxValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Max 55%"
                    android:textSize="16sp"
                    android:textColor="@color/white" />
                <Button
                    android:id="@+id/lightAddButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_threshold"
                    android:visibility="gone"
                    android:backgroundTint="@color/jungle_green"
                    android:textColor="@color/white" />
                <Button
                    android:id="@+id/lightEditButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    android:visibility="gone"
                    android:backgroundTint="@color/jungle_green"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>